# tcl_client

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  proj.cmake
.github/workflow/: build_msvc.yml
.github/workflows/: continar_build.yml  msvc_build.yml
inc/event/: event.h
inc/gui/: gui.h  main_window.h
inc/gui/ui/: main_window.ui
inc/log/: log.h
inc/serial/: serial_port.h
inc/tcl/: tcl_command.h
inc/utility/: utility.h
ref/x86_64/lib/serial/: serial.lib
ref/x86_64/lib/tcl8.6.15/lib/: tcl86tg.lib  tclConfig.sh  tclstub86.lib
ref/x86_64/lib/tcl8.6.15/lib/itcl4.3.0/: itclstub430.lib
ref/x86_64/lib/tcl8.6.15/lib/nmake/: tcl.nmake
ref/x86_64/lib/tcl8.6.15/lib/sqlite3.45.3/: pkgIndex.tcl
ref/x86_64/lib/tcl8.6.15/lib/tdbc1.1.9/: pkgIndex.tcl  tdbcConfig.sh  tdbcstub119.lib
ref/x86_64/lib/tcl8.6.15/lib/tdbcmysql1.1.9/: pkgIndex.tcl
ref/x86_64/lib/tcl8.6.15/lib/tdbcodbc1.1.9/: pkgIndex.tcl
ref/x86_64/lib/tcl8.6.15/lib/tdbcpostgres1.1.9/: pkgIndex.tcl
ref/x86_64/lib/tcl8.6.15/lib/thread2.8.10/: pkgIndex.tcl
script/: generate_mingw_prj.py  pre_build.bat
src/: CMakeLists.txt
src/event/: CMakeLists.txt  event.cc  event_tcl.cc
src/gmock/: CMakeLists.txt
src/gtest/: CMakeLists.txt
src/gui/: CMakeLists.txt  gui.cc  main_window.cc
src/log/: CMakeLists.txt  log.cc
src/main/: CMakeLists.txt  main.cc  param.def
src/serial/: CMakelists.txt  serial_port.cc  serial_port_tcl.cc
src/tcl/: CMakeLists.txt  register_commands.cc  tcl_command.cc
src/utility/: CMakeLists.txt  utility_file.cc  utility_string.cc
